--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>__________</p>
             <h2>Full-Stack Developer</h2>
             <div class="redes">
-                <a href="https://mail.google.com/mail" target="_blank"
+                <a href="mailto:sosafuchmelina@gmail.com" target="_blank"
                 rel="noreferrer"><i class="fa-solid fa-at"></i></a>
                 <a href="https://github.com/MelinaFuch" target="_blank"
                 rel="noreferrer"><i class="fa-brands fa-github"></i></a>
@@ -397,7 +397,7 @@
             <i class="fa-sharp fa-solid fa-angles-up"></i>
         </a>
         <div class="redes">
-            <a href="https://mail.google.com/mail" target="_blank" rel="noreferrer"><i class="fa-solid fa-at"></i></a>
+            <a href="mailto:sosafuchmelina@gmail.com" target="_blank" rel="noreferrer"><i class="fa-solid fa-at"></i></a>
             <a href="https://github.com/MelinaFuch" target="_blank" rel="noreferrer"><i class="fa-brands fa-github"></i></a>
             <a href="https://www.linkedin.com/in/melina-sosa-fuch-1a7376207/" target="_blank" rel="noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
